--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -16,8 +16,8 @@ time of great personal development, and the time when I connected with pop music
 most deeply. It was the rise of hip-hop and indie. It was a time when disruptive
 technologies changed the way music was made and sold. It was a time when the
 innovators started to break from the mainstream of pop music, but the internet
-still help them find an audience. I'm glad that I go to be young, but not too
-young, in such interesting times.
+still helped them find an audience. I'm glad that I got to be young, but not too
+young in such interesting times.
 
 
 2000s Stats/Favorites
@@ -64,6 +64,128 @@ The heartbreaking...
   allowfullscreen></iframe>
 
 ...and what a stunning performance of it!
+
+2002
+----
+
+This is another interesting inflection point in this project. I'm going through
+the years backwards as I write this, and I knew there would come a time where
+the majority of my favorites would be retroactive discoveries. It isn't
+surprising that this happened in the last full year before paid downloads
+changed the way I consumed new music, and satellite radio accelerated my music
+discovery. At this point, I had mostly lost interest in mainstream rock and was
+only really hearing the latest music from artists that I had a pre-existing
+relationship with. The only major place I was hearing new music was online radio
+streams like Virgin Radio UK. Looking back on the collection of records below,
+this clearly was a landmark year for the burgeoning indie movement. A fair
+number of underground scenes were starting to break through, and there are some
+legendary records from the artists that would be the face of the movement on
+both sides of the Atlantic. 
+
+In 2002 I would move away from home town permanently. As an undergrad, I spent
+the summer months at home in Pennsylvania working full time at the company I was
+an intern for. At the end of the summer of 2002 I would move back to State
+College for grad school, and that would be my home for the next 6 years. My last
+year as an intern ended abruptly when I was layed off due to financial problems
+at the company. It was less than two weeks before my planned departure anyway,
+and I made good use of the extra time. At this point I owned just under 400 releases
+on CD, and with the time I had before returning to school, I burned the whole
+lot of them to MP3. Working in eight hour shifts, I used my PC to rip discs one
+at a time in the days when it took a good 10-15 minutes per disk. Working in 8+
+hour shifts, 6 days a week I had a hard drive filled with my entire collection
+for the first time. Being able to listen to anything I owned in iTunes was a
+game changer, and I was rediscovering and re-evaluating music from my teenage
+years. I didn't know it yet, but this was the beginning of the end for the CD,
+and the way that I had discovered and consumed music since I was very young.
+
+.. image:: images/2002.jpg
+  :width: 900
+  :alt: My 2002 favorite albums
+
+.. raw:: html
+
+  <iframe style="border-radius:12px" 
+  src="https://open.spotify.com/embed/playlist/6tUGb73LKaFWCuGIbNvRrA?utm_source=generator&theme=0" 
+  width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay;
+  clipboard-write; 
+  encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+- *Arcade Fire* by **The Arcade Fire** - These guys arrived fully formed. While
+  it lacks some of the polish their debut LP would have, the spirit and
+  songwriting is all here. A stellar EP. [*Memory*: I sought this out after
+  buying and loving **Funeral** and it was exciting to know that this young band
+  already had more material to enjoy.]
+
+- *Scarlet's Walk* by **Tori Amos** - I saw this as a disappointing turn to
+  adult contemporary when it was first released, but have come to enjoy it much
+  more over time. This is a mellower, more accessible sound but the songwriting
+  and performance is still top notch. Several of her very best songs are on this
+  record, in particular the amazing closer "Gold Dust". [*Memory*: The lead
+  single "A Sort of Fairytale" was one of the first (perhaps the very first)
+  free download of the week I remember from iTunes. Soon thereafter I remember
+  seeing the creepy head on a foot video on VH1.]
+
+- *Heathen* by **David Bowie** - A much more successful attempt a the
+  neo-classical sound that had started on **Hours** and the aborted **Toy**.
+  Looking back, this is the start of the glorious last act to his career. A
+  subtle and warm record, the sound of an innovator who is now content but still
+  a restless creative. [*Memory*: I heard this for the first time streaming
+  Virgin Radio at work in June of 2002. The last record got almost no attention
+  in the USA, so this came out of nowhere feeling like his first album since
+  **Earthling**.]
+
+- *Lifted..* by **Bright Eyes** - Connor Oberst is one of those artists that
+  has may albums that I kinda like, but only one that I love. I think the
+  stylistic variety on this one separates it from all the other very indie folk
+  heavy albums. The songwriting is just a little extra sharp and the
+  production just a little raw in a way that doesn't feel forced like some of
+  the later albums. [*Memory*: It is funny to remember that I discovered this
+  record by the way of hearing "Lover I Don't Have to Love", since that dark
+  keyboard heavy track is not at all representative of the record, or this
+  artist in general.]
+
+- *Conjure One* by **Conjure One** - Maybe the single best album that Rhys
+  Fulber had been a part of came from this solo project. I really
+  dig the world music fusion with a much harder edge than what we typically saw
+  in this guy's other work. "Manic Star" is also a fine electronic pop song.
+  [*Memory*: I had only just recently discovered **Delerium** and **Front Line
+  Assembly** and was bummed to hear that they were splitting up. The hiatus
+  didn't last long, and we got a great new project out of it.]
+
+- *The Last Broadcast* by **Doves** - The perfect balance of their early
+  post-rock influenced sound, and the later straight ahead indie-rock. This is
+  excellently produced, layered rock music with delicate pleasant vocals. The
+  intricate "There Goes the Fear" is one of my all-time favorite songs.
+  [*Memory*: It is hard to listen to this record and not remember the apartment
+  I shared with two other students in my grad school days. I listened to this a
+  ton in those days.]
+
+- *Yoshimi Battles the Pink Robots* by **The Flaming Lips** - In general I have
+  lost interest in these guys, as their eccentric psych-pop hasn't aged too
+  well. That said this loose concept record is still something that I am happy
+  to put on every couple years. [*Memory*: I always remember these guys as the
+  first of many Pitchfork festival headliners that I was too tired to stay for
+  (2009).]
+
+- *Up* by **Peter Gabriel** - All of a sudden there was a new album by this guy,
+  and it sounded shockingly contemporary. The aggressive, industrial sounds of
+  "Darkness" still managed to also have that magical **Gabriel** atmospherics.
+  What he gives up in frequency he more than makes up for with consistency.
+  [*Memory*: When writing this 20 years later, I realized for the first time the
+  artist's face is visible on the cover in the background.]
+
+- *Yanqui U.X.O.* by **Godspeed You! Black Emperor** - The heaviest record by a
+  very heavy post rock band. The thick guitar noise regularly washes out the
+  layered string instruments. "Rockets Fall on Rocket Falls" is their very best.
+  [*Memory*: I don't know that I have jammed any song more often on headphones
+  as "Rockets Fall on Rocket Falls".]
+
+- *Turn on the Bright Lights* by **Interpol** - Their classic debut still hits
+  hard two decades later. A landmark in the post punk revival, this also gives
+  an indication of the depth they would show in later records. [*Memory*: I
+  bought this record on a whim when I saw it on sale at Best Buy. I remembered
+  hearing about them as the next big thing, and had heard their sound compared
+  to **Joy Division** who I was starting to become very interested in.]
 
 2003
 ----
