--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -169,23 +169,76 @@ and the way that I had discovered and consumed music since I was very young.
 
 - *Up* by **Peter Gabriel** - All of a sudden there was a new album by this guy,
   and it sounded shockingly contemporary. The aggressive, industrial sounds of
-  "Darkness" still managed to also have that magical **Gabriel** atmospherics.
+  "Darkness" still managed to also have that magical **Gabriel** atmosphere.
   What he gives up in frequency he more than makes up for with consistency.
   [*Memory*: When writing this 20 years later, I realized for the first time the
   artist's face is visible on the cover in the background.]
 
 - *Yanqui U.X.O.* by **Godspeed You! Black Emperor** - The heaviest record by a
-  very heavy post rock band. The thick guitar noise regularly washes out the
+  very heavy post-rock band. The thick guitar noise regularly washes out the
   layered string instruments. "Rockets Fall on Rocket Falls" is their very best.
   [*Memory*: I don't know that I have jammed any song more often on headphones
-  as "Rockets Fall on Rocket Falls".]
+  than "Rockets Fall on Rocket Falls".]
 
 - *Turn on the Bright Lights* by **Interpol** - Their classic debut still hits
   hard two decades later. A landmark in the post punk revival, this also gives
   an indication of the depth they would show in later records. [*Memory*: I
   bought this record on a whim when I saw it on sale at Best Buy. I remembered
   hearing about them as the next big thing, and had heard their sound compared
-  to **Joy Division** who I was starting to become very interested in.]
+  to **Joy Division** who I was starting to become very interested in. This is
+  probably my gateway into indie.]
+
+- *Up the Bracket* by **The Libertines** - Much like the US, the early days of
+  2000s UK indie was dominated by rough around the edges revivalists. These guys
+  feel like a more addled **Clash**. They would never come close to the quality
+  of this shambolic debut again. [*Memory*: This was one of my favorite running
+  records in the early-mid 2000s, and I turned many laps at the Penn State IM
+  building listening to to this.]
+
+- *Riot Act* by **Pearl Jam** - Their transition to mid-tempo aging alt rockers
+  was complete. They held it together for one last excellent album before
+  becoming very boring. Filled with high quality ballads like "Love Boat
+  Captain". [*Memory*: I saw them on this tour in State College, PA and I'm glad
+  I had the opportunity to see them before their over the hill days.]
+
+- *In Absentia* by **Porcupine Tree** - At the time this felt like a very heavy
+  metal sound. The **Steven Wilson** solo records have in many ways made this
+  sound far milder. That said, it is a great semi-prog alt rock record and
+  another interesting reinvention for this band. [*Memory*: I had just started
+  to listen to them, when they seemed to disappear for a while. After a label
+  change they became a much bigger thing in the US, such that I was even able to
+  buy this from Columbia House Music Club.]
+
+- *Kill the Moonlight* by **Spoon** - The album where they got their magic
+  formula together. Percussive, minimalist indie rock that is more
+  piano/keyboard focussed. A fantastic record, and the next four albums were a
+  progressive climb from here. [*Memory*: I bought this new on vinyl at Amoeba
+  records for 12 bucks in 2009. Many I miss those days.]
+
+- *Everyone Who Pretended to Like Me is Gone* by **The Walkmen** - By far their
+  most experimental record was their first. There are so many off-kilter
+  rhythmic, structural, and instrumental elements here. **Hamilton Leithouser**
+  was bringing it as a belting vocalist from the first track. Still a super
+  interesting listen today, especially the eccentric career highlights "Wake Up"
+  and "Rue the Day". [*Memory*: Like many people, I first heard of these guys
+  when the song "We've Been Had" was used in a long running Saturn Ion
+  commercial.]
+  
+- *Out of the Fierce Parade* by **The Velvet Teen** - They have made quite a bit
+  of music since, but their first statement remains the best. Some really
+  enjoyable light alternative rock with soaring vocals. [*Memory*: In the early
+  days of Sirius radio, the DJs would get a single free pick of their own per
+  shift. One of them almost always used this selection on "The Prize Fighter".
+  Why not? It is an amazing track.]
+
+- *Yankee, Hotel, Foxtrot* by **Wilco** - Not as revolutionary or experimental
+  as it felt back then, but they add enough new elements to their country tinged
+  sound to make things quite a bit more interesting. It was a time of great
+  interest in "shortwave radio stations" and this is probably the most famous
+  reference to them. A pretty great collection of songs, from the folky "Jesus,
+  Etc." to the power-pop of "Heavy Metal Drummer". [*Memory*: I dropped the
+  record brush on my vinyl copy while dry cleaning. It will always have a few
+  pops and cracks on "Poor Places" as a result.]
 
 2003
 ----
