--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -215,14 +215,14 @@ and the way that I had discovered and consumed music since I was very young.
   progressive climb from here. [*Memory*: I bought this new on vinyl at Amoeba
   records for 12 bucks in 2009. Many I miss those days.]
 
-- *Everyone Who Pretended to Like Me is Gone* by **The Walkmen** - By far their
-  most experimental record was their first. There are so many off-kilter
-  rhythmic, structural, and instrumental elements here. **Hamilton Leithouser**
-  was bringing it as a belting vocalist from the first track. Still a super
-  interesting listen today, especially the eccentric career highlights "Wake Up"
-  and "Rue the Day". [*Memory*: Like many people, I first heard of these guys
-  when the song "We've Been Had" was used in a long running Saturn Ion
-  commercial.]
+- *Everyone Who Pretended to Like Me is Gone* by **The Walkmen** [**2003
+  Favorite**] - By far their most experimental record was their first. There are
+  so many off-kilter rhythmic, structural, and instrumental elements here.
+  **Hamilton Leithouser** was bringing it as a belting vocalist from the first
+  track. Still a super interesting listen today, especially the eccentric career
+  highlights "Wake Up" and "Rue the Day". [*Memory*: Like many people, I first
+  heard of these guys when the song "We've Been Had" was used in a long running
+  Saturn Ion commercial.]
   
 - *Out of the Fierce Parade* by **The Velvet Teen** - They have made quite a bit
   of music since, but their first statement remains the best. Some really
@@ -445,7 +445,7 @@ it would be what I wanted to do.
   rateyourmusic top lists. That **Pink Floyd** like cover is an attention
   getter. Once I finally gave it it try, I was happy with the content as well.]
 
-- *Absolution* by **Muse** - This was the album tha finally got some attention
+- *Absolution* by **Muse** [**2003 Favorite**] - This was the album tha finally got some attention
   in the USA, and it is easy to see why. This downplays the progressive elements
   of the last record a bit, and provides something that is a bit more straight
   ahead hard rock. This was the perfect thing for all the folks who listened to
@@ -2841,79 +2841,110 @@ This is the decade with the most albums, and by far the most favorite songs.
 - "Golden Touch - Full Length" by **Razorlight** - Might be "Landfill Indie" but
   it is good "Landfill Indie".
 
-- "Lights Out" by **Santigold** - 
+- "Lights Out" by **Santigold** - Such a great little power-pop gem.
 
-- "Tear You Apart" by **She Wants Revenge** - 
+- "Tear You Apart" by **She Wants Revenge** - Sirius was hyping the crap out of
+  these guys, but this is really there only good song.
 
-- "BlindBlindBlind" by **Silver Mt. Zion** - 
+- "BlindBlindBlind" by **Silver Mt. Zion** - Bad singing has never sounded so
+  good before or after.
 
-- "Two Way Monologue" by **Sondre Lerche** - 
+- "Two Way Monologue" by **Sondre Lerche** - I was really into this guy back
+  then, but this is about all I care to listen to these days.
 
-- "Four to the Floor" by **Starsailor** - 
+- "Four to the Floor" by **Starsailor** - These guys take a break from generic
+  slow rock to let Phil Spector make one last classic.
 
-- "You Are The Blood" by **Sufjan Stevens** - 
+- "You Are The Blood" by **Sufjan Stevens** - A wild 10 minute epic that is peak
+  weird Sufjan.
 
-- "Punkrocker - feat. Iggy Pop" by **Teddybears** - 
+- "Punkrocker - feat. Iggy Pop" by **Teddybears** - A really cool Krautrock
+  style song from a band that achieved nothing else.
 
-- "A Minha Menina" by **The Bees** - 
+- "A Minha Menina" by **The Bees** - A great cover that is almost to similar to
+  the original, but still does enough new.
 
-- "Go Karts" by **The Bees** - 
+- "Go Karts" by **The Bees** - Their only weakness is how derivative everything
+  seems. This Sgt. Pepper era Beatles homage works pretty well.
 
-- "Velvet" by **The Big Pink** - 
+- "Velvet" by **The Big Pink** - Amazing song from a very mediocre album. The
+  shoegazzey bridge in the middle is spectacular.
 
-- "Dominos" by **The Big Pink** - 
+- "Cobalt Blue" by **The Church** - This was a very good latter day record, and
+  this was an especially great track from it. Are they trying to make an **Echo
+  and the Bunnymen** song?
 
-- "Cobalt Blue" by **The Church** - 
+- "Pass It On" by **The Coral** - Much like **The Bees**, their only weakness is
+  their inability to separate themselves from their influences, but this is
+  pretty great.
 
-- "Pass It On" by **The Coral** - 
+- "Dreaming of You" by **The Coral** - see above.
 
-- "Dreaming of You" by **The Coral** - 
+- "I Believe in a Thing Called Love" by **The Darkness** - You couldn't escape
+  this song in 2004, but who would want to avoid this trashy rock fun.
 
-- "I Believe in a Thing Called Love" by **The Darkness** - 
+- "No Cities Left" by **The Dears** - I generally have little interest in their
+  early music other than this interesting song with a big sound that fits in
+  well with their best work to come.
 
-- "No Cities Left" by **The Dears** - 
+- ""The Gymnast, High Above the Ground"" by **The Decemberists** - Each of the
+  first two records has a great song.
 
-- ""The Gymnast, High Above the Ground"" by **The Decemberists** - 
+- "California One / Youth and Beauty Brigade" by **The Decemberists** - See above
 
-- "California One / Youth and Beauty Brigade" by **The Decemberists** - 
+- "Modern Moonlight" by **The Dresden Dolls** - The drumming in this song is
+  some of the best punk small kit work I have ever seen or heard.
 
-- "Modern Moonlight" by **The Dresden Dolls** - 
+- "Don't Know Why (You Stay)" by **The Essex Green** - An obscure latter day E6
+  pop gem.
 
-- "Don't Know Why (You Stay)" by **The Essex Green** - 
+- "Agenda Suicide" by **The Faint** - So stupid, but so enjoyable.
 
-- "Agenda Suicide" by **The Faint** - 
+- "The W.A.N.D." by **The Flaming Lips** - The first song I ever liked by these
+  guys, and probably still my favorite.
 
-- "The W.A.N.D." by **The Flaming Lips** - 
+- "Dynamo" by **The Golden Dogs** - I don't know that another band has ever
+  really sounded so much like **Paul McCarney and Wings** as these guys do here.
 
-- "Dynamo" by **The Golden Dogs** - 
+- "Who's Got The Crack" by **The Moldy Peaches** - A completely ridiculous joke
+  of a song that totally works.
 
-- "Who's Got The Crack" by **The Moldy Peaches** - 
+- "Girls" by **The Prodigy** - Some really interesting latter day techno that
+  pulls in elements of the bass heavy electronic music of the day.
 
-- "Girls" by **The Prodigy** - 
+- "Phantom Limb" by **The Shins** - The one amazing track from the weak third album.
 
-- "Phantom Limb" by **The Shins** - 
+- "Dry Your Eyes" by **The Streets** - I do still like this jokey concept record
+  though I rarely find myself returning to it, with the exception of this
+  earnestly sincere closing track.
 
-- "Dry Your Eyes" by **The Streets** - 
+- "Seven Nation Army" by **The White Stripes** - Being played at every sporting
+  event of the last 20 years has somehow not ruined this one.
 
-- "Seven Nation Army" by **The White Stripes** - 
+- "Fell In Love With a Girl" by **The White Stripes** - Legos.
 
-- "Fell In Love With a Girl" by **The White Stripes** - 
+- "Experimental Film" by **They Might Be Giants** - Weirdly this latter day
+  track was the song that got these guys on my radar.
 
-- "Experimental Film" by **They Might Be Giants** - 
+- "Sweet the Sting" by **Tori Amos** - A terrific song off a horrible record.
 
-- "Sweet the Sting" by **Tori Amos** - 
+- "Flowers In The Window" by **Travis** - Why did I like these guys so much?
+  Well this song is pretty good.
 
-- "Flowers In The Window" by **Travis** - 
+- "Staring at the Sun" by **TV On The Radio** - I never liked these guys as much
+  as everyone else, but their first album had some pretty good tracks.
 
-- "Staring at the Sun" by **TV On The Radio** - 
+- "Ambulance" by **TV On The Radio** - ...and this a capella track was best of all.
 
-- "Ambulance" by **TV On The Radio** - 
+- "Oxford Comma" by **Vampire Weekend** - A clever little pop song from a band
+  that would rapidly outlast their welcome.
 
-- "Oxford Comma" by **Vampire Weekend** - 
+- "Maps" by **Yeah Yeah Yeahs** - A very hot and cold band, but their high
+  points are very high, like this stellar post-punk ballad.
 
-- "Maps" by **Yeah Yeah Yeahs** - 
-
-- "Heads Will Roll" by **Yeah Yeah Yeahs** - 
+- "Heads Will Roll" by **Yeah Yeah Yeahs** - One of the first shots fired in the
+  80s revival, when the punk kids discovered keyboards and drum machines for the
+  second time.
 
 **Exploring the Past**
 
@@ -3120,8 +3151,9 @@ some reason.
   about artists like **Ludicris**  ("Rollout"), **Missy Elliot** ("Gossip
   Folks"), and **Outkast** (many songs, but initially **Mrs. Jackson**, and
   **Killer Mike** ("A.D.I.D.A.S."). I did stay in contact with this music,
-  mostly at parties, in my student days, but generally speaking it hasn't
-  followed me into adult life. I do have a playlist I put on every now and then
+  mostly at parties in my student days, but generally speaking it hasn't
+  followed me into adult life. This music doesn't make much sense to me outside
+  of the context I discovered it. I do have a playlist I put on every now and then
   when I want to feel young.
 
 - **Classical Music** - Around the turn of the millennium, my favorite store to
