--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -243,12 +243,78 @@ changers.
   post-rock albums. This was the first one I connected with.]
 
 - *Origin of Symmetry* by **Muse** - Their second record is still their finest.
-  The perfect mix of guitars and synths. So completely over the top, it manages
-  to somehow avoid sounding ridiculous. Delightfully heavy music. [*Memory*:
-  After connecting with their third record I sought out the much hyped album
-  that had come before, but discovered that it was never released here. For a
-  couple years I looked at import listings for the record online, but didn't get
-  my own copy until the proper WB release in 2005.]
+  The perfect mix of guitars and synths, and soaring falsetto vocals. So
+  completely over the top, it manages to somehow avoid sounding ridiculous.
+  Delightfully heavy music. [*Memory*: After connecting with their third record
+  I sought out the much hyped album that had come before, but discovered that it
+  was never released here. For a couple years I looked at import listings for
+  the record online, but didn't get my own copy until the proper WB release in
+  2005.]
+
+- *Coquelicot Asleep in the Poppies...* by **Of Montreal** - The last of the
+  early lowfi psych records before this bedroom project became a full band.
+  Loosely a concept record, but the real focus here is the quirky pop songs and
+  layers upon layers of sound. Also the last record with the childlike whimsey
+  before Kevin Barnes went in a much more adult territory. [*Memory*: This is
+  one of the very first vinyl reissues I remember being very excited about, when
+  it was released by Polyvinyl in early 2009.]
+
+- *Amnesiac* by **Radiohead** - One of my strongly held, unpopular opinions is
+  that this is far better than the much loved *Kid A*. While the prior record at
+  times became lost in meandering instrumentals, this one finds the perfect mix
+  of songs and ambient interludes. Several of their greatest songs are here,
+  particularly "Pyramid Song", "You And Whose Army?", and especially "Knives
+  Out". This might be my favorite of their records. [*Memory*: I listened to
+  this on repeat while I assembled my first self-built PC in the fall of 2006.]
+
+- *Chutes Too Narrow* by **The Shins** - Almost an indie cliche at this point,
+  it is easy to forget what a wonderful collection of pop songs this is. By the
+  next album all the rough edges would be gone. The two songs that this ends
+  with "Pressed in a Book" and "The Past and Pending" is probably still the best
+  moment from this guy. [*Memory*: I'm proud that I knew about this record
+  before that dreadful Natalie Portman movie, if only just before. I still came
+  on board via "New Slang" when I heard it on Sirius satellite radio in 2003.]
+
+- *Smolik* by **Smolik** - A semi-obscure Polish indie record that is equally
+  influenced by folk and electronic music. This is the work of a veteran
+  musician who had been around for a while when all of a sudden his music was
+  very in fashion. I love the minimal wave intro, and picture the artist making
+  the track behind the iron curtain in the late 80s. [*Memory*: A friend of mine
+  came home from Poland with this disk, very excited about the burgeoning indie
+  scene in his home nation. I think this album ended up resonating even more
+  with me. I've listened to the CD-R copy I burned many times in the 20 years
+  since.]
+  
+- *Girls Can Tell* by **Spoon** - The album where they got their magic
+  formula together. Percussive, minimalist indie rock that is more
+  piano/keyboard focussed. A fantastic record, and the next three albums were a
+  progressive climb from here. [*Memory*: "The Fitted Shirt" was a really
+  amusing in retrospect because of the role hipsters would play in bringing back
+  slim cut men's fashion.]
+
+- *Is this It* by **The Strokes** - The *Pet Sounds* of the 2000s indie scene.
+  These guys were always poppier than their post-punk revival contemporaries,
+  but in retrospect this feels like a very bubblegum high-water mark for the
+  genre. Feels less overrated now than it did back then, classic stuff.
+  [*Memory*: Like many folks, this music got on my radar at the 2002 VMAs when
+  all of a sudden there was a new kind of rock music with the likes of **The
+  Vines**, **The Hives**, and **The White Stripes**, but these guys are the only
+  band from that cohort who are still active and relevant.]
+
+- *Rings Around the World* by **Super Furry Animals** - For exactly one album
+  they gathered up and made a more measured, mature record. It still has the
+  best elements of their classic neo-psychedelia, but now with strings and
+  highly refined production values. I would have loved more work in this vein.
+  [*Memory*: I always liked this record, but I didn't really connect with it
+  until the days of the 2020 pandemic. I guess I needed to be a bit older to
+  fully understand this kind of music.]
+
+- *Leaves Turn Inside You* by **Unwound** - The kind of slow, atmospheric rock
+  that gets lumped into the post-rock scene, even if that isn't quite right.  I
+  have never totally been able to get into these guys, but this one is a
+  classic. [*Memory*: I discovered this in the late 2010s when I heard a DJ play
+  it on one of the local college radio stations late at night. That is exactly
+  the kind of record this is.]
 
 2002
 ----
@@ -394,11 +460,9 @@ and the way that I had discovered and consumed music since I was very young.
   change they became a much bigger thing in the US, such that I was even able to
   buy this from Columbia House Music Club.]
 
-- *Kill the Moonlight* by **Spoon** - The album where they got their magic
-  formula together. Percussive, minimalist indie rock that is more
-  piano/keyboard focussed. A fantastic record, and the next four albums were a
-  progressive climb from here. [*Memory*: I bought this new on vinyl at Amoeba
-  records for 12 bucks in 2009. Many I miss those days.]
+- *Kill the Moonlight* by **Spoon** - Another solid record that feels like a
+  companion piece to **Girls Can Tell**. [*Memory*: I bought this new on vinyl
+  at Amoeba records for 12 bucks in 2009. Many I miss those days.]
 
 - *Everyone Who Pretended to Like Me is Gone* by **The Walkmen** [**2003
   Favorite**] - By far their most experimental record was their first. There are
