--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -242,14 +242,14 @@ changers.
   things I did when I got eMusic, was sample a bunch of the most famous
   post-rock albums. This was the first one I connected with.]
 
-- *Origin of Symmetry* by **Muse** - Their second record is still their finest.
-  The perfect mix of guitars and synths, and soaring falsetto vocals. So
-  completely over the top, it manages to somehow avoid sounding ridiculous.
-  Delightfully heavy music. [*Memory*: After connecting with their third record
-  I sought out the much hyped album that had come before, but discovered that it
-  was never released here. For a couple years I looked at import listings for
-  the record online, but didn't get my own copy until the proper WB release in
-  2005.]
+- *Origin of Symmetry* by **Muse** [**2002 Favorite**] - Their second record is
+  still their finest. The perfect mix of guitars and synths, and soaring
+  falsetto vocals. So completely over the top, it manages to somehow avoid
+  sounding ridiculous. Delightfully heavy music. [*Memory*: After connecting
+  with their third record I sought out the much hyped album that had come
+  before, but discovered that it was never released here. For a couple years I
+  looked at import listings for the record online, but didn't get my own copy
+  until the proper WB release in 2005.]
 
 - *Coquelicot Asleep in the Poppies...* by **Of Montreal** - The last of the
   early lowfi psych records before this bedroom project became a full band.
@@ -266,6 +266,12 @@ changers.
   particularly "Pyramid Song", "You And Whose Army?", and especially "Knives
   Out". This might be my favorite of their records. [*Memory*: I listened to
   this on repeat while I assembled my first self-built PC in the fall of 2006.]
+
+- *Melody A.M.* by **Royksopp** - Somewhere between chill and dance electronic,
+  these guys found a new sound. They would never make another record quite like
+  their debut again, and this is probably still their finest statement.
+  [*Memory*: I became aware of them when I bought a discount chill music box set
+  at Best Buy that included the track "Eple".]
 
 - *Chutes Too Narrow* by **The Shins** - Almost an indie cliche at this point,
   it is easy to forget what a wonderful collection of pop songs this is. By the
@@ -302,7 +308,7 @@ changers.
   band from that cohort who are still active and relevant.]
 
 - *Rings Around the World* by **Super Furry Animals** - For exactly one album
-  they gathered up and made a more measured, mature record. It still has the
+  they gathered up and made a fore measured, mature record. It still has the
   best elements of their classic neo-psychedelia, but now with strings and
   highly refined production values. I would have loved more work in this vein.
   [*Memory*: I always liked this record, but I didn't really connect with it
@@ -464,7 +470,7 @@ and the way that I had discovered and consumed music since I was very young.
   companion piece to **Girls Can Tell**. [*Memory*: I bought this new on vinyl
   at Amoeba records for 12 bucks in 2009. Many I miss those days.]
 
-- *Everyone Who Pretended to Like Me is Gone* by **The Walkmen** [**2003
+- *Everyone Who Pretended to Like Me is Gone* by **The Walkmen** [**2002
   Favorite**] - By far their most experimental record was their first. There are
   so many off-kilter rhythmic, structural, and instrumental elements here.
   **Hamilton Leithouser** was bringing it as a belting vocalist from the first
